--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Avondale_College</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Avondale College</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Avondale_College - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &reg; 2020 - Avondale College 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
