I have added a reset password tab so user can reset their password by using their own email addrress

--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -34,10 +34,15 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block">Log in</button>
-                </div>
-                <div class="form-group">                   
-                </div>
-            </form>
+                    <div class="form-group">
+                        <p>
+                            <a id="Reset Password" asp-page="./ForgotPassword">Reset Password</a>
+                        </p>
+                    </div>
+                    <div class="form-group">
+                    </div>
+                    </div>
+</form>
         </section>
     </div>
     
